test/spec/func_ptrs.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func_ptrs.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:30:25: elem segment cannot be specified without table section
(assert_invalid (module (elem (i32.const 0))) "no table defined")
                        ^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:31:25: elem segment cannot be specified without table section
(assert_invalid (module (elem (i32.const 0) 0) (func)) "no table defined")
                        ^^^^^^^^^^^^^^^^^^^^^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:34:36: elem segment expression must be of type i32; got i64.
  (module (table 1 anyfunc) (elem (i64.const 0)))
                                   ^^^^^^^^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:38:36: invalid elem segment expression, must be a constant expression; either *.const or get_global.
  (module (table 1 anyfunc) (elem (i32.ctz (i32.const 0))))
                                   ^^^^^^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:42:36: invalid elem segment expression, must be a constant expression; either *.const or get_global.
  (module (table 1 anyfunc) (elem (nop)))
                                   ^^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:46:37: function type variable out of range (max 0)
(assert_invalid (module (func (type 42))) "unknown function type 42")
                                    ^^
assert_invalid error:
  third_party/testsuite/func_ptrs.wast:47:58: function type variable out of range (max 0)
...id (module (import "spectest" "print" (type 43))) "unknown function type 43")
                                               ^^
called import spectest.print(i32:83)
$invoke_3() 
25/25 tests passed.
;;; STDOUT ;;)
